syntax = "proto3";

package org.e2eelab.lib.protobuf;

import "e2ee_address.proto";
import "ratchet.proto";

message e2ee_session {
    uint32 version = 1;
    bytes session_id = 2;
    e2ee_address session_owner = 3;
    e2ee_address from = 4;
    e2ee_address to = 5;
    ratchet ratchet = 6;
    bytes alice_identity_key = 7;
    bytes alice_ephemeral_key = 8;
    bytes bob_signed_pre_key = 9;
    bytes bob_one_time_pre_key = 10;

    bool responded = 11;
    bytes associated_data = 12;
}
