syntax = "proto3";

package org.e2eelab.lib.protobuf;

message key_pair {
  bytes public_key = 1;
  bytes private_key = 2;
}